# failure-streak-proto

./: pyproject.toml
src/failurestreaks/: find_streaks_cli.py
